Fixed navbar so that there was no padding in media size. Added collapse styling for scrolled navbar for additional white background and custom top position. Added new class to navbar to have hamburger icon, but modify its style in css to utilize both dark and light mode when appropriate

--- a/static/styles/page_base.css
+++ b/static/styles/page_base.css
@@ -1,6 +1,23 @@
 @charset "utf-8";
 /* CSS Document */
 
+/* Mobile browsing! */
+@media screen and (max-width: 767px)
+{
+    #page-navbar .mobile-padding {
+        padding: 0;
+    }
+
+    #page-navbar .navbar-toggler {
+        margin-right: 1rem;
+        box-shadow: none;
+    }
+
+    #page-navbar .navbar-toggler:focus {
+        box-shadow: 0 0 0 0.1rem;
+    }
+}
+
 html {
     overflow-y: scroll;
     min-height: 100%;
