--- a/static/styles/page_navbar.css
+++ b/static/styles/page_navbar.css
@@ -2,15 +2,19 @@
 /* CSS Document */
 
 /* Makes sure navbar does not push content down */
-@media screen and (max-width: 768px)
+@media screen and (max-width: 767px)
 {
-    .navbar-collapse
-    {
+    #page-navbar.base .navbar-collapse {
         position: absolute !important;
         max-height: none !important;
         z-index: 20;
         width: 100%;
         top: 100px;
+    }
+    
+    #page-navbar.base .navbar-toggler {
+        color: rgba(255,255,255,.55);
+        border-color: rgba(255,255,255,.1);
     }
 }
 
